[gd_scene load_steps=4 format=3 uid="uid://md8i4cl7o1sj"]

[ext_resource type="Script" uid="uid://ciy7nxm43xex6" path="res://assets/scripts/props/baseItem.gd" id="1_c6bn3"]
[ext_resource type="Texture2D" uid="uid://dl45iltjx5fks" path="res://assets/sprites/items/default.png" id="2_35oom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35oom"]
size = Vector2(16, 14)

[node name="item" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
input_pickable = true
script = ExtResource("1_c6bn3")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_35oom")

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_35oom")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
